; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_win32.c_mch_getperm.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_win32.c_mch_getperm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mch_getperm(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 92
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 1
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 92
  br i1 %16, label %17, label %20

17:                                               ; preds = %11
  %18 = load i8*, i8** %3, align 8
  %19 = call i64 @win32_getattrs(i8* %18)
  store i64 %19, i64* %2, align 8
  br label %31

20:                                               ; preds = %11, %1
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @mch_stat(i8* %21, %struct.stat* %4)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  br label %29

28:                                               ; preds = %20
  br label %29

29:                                               ; preds = %28, %25
  %30 = phi i64 [ %27, %25 ], [ -1, %28 ]
  store i64 %30, i64* %2, align 8
  br label %31

31:                                               ; preds = %29, %17
  %32 = load i64, i64* %2, align 8
  ret i64 %32
}

declare dso_local i64 @win32_getattrs(i8*) #1

declare dso_local i32 @mch_stat(i8*, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
